--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <title>Teste de Digitação</title>
     <style>
       html {
-        font-size: 20px;
+        font-size: 25px;
+      }
+
+      body {
+        height: 100dvh;
+        display: flex;
+        align-items: center;
       }
 
       #main-container {
-        max-width: 600px;
+        max-width: 700px;
         margin: 0 auto;
       }
 
